--- a/app/globals.css
+++ b/app/globals.css
@@ -14,8 +14,7 @@
 }
 
 @theme inline {
-  --animate-toggle: toggle 0.7s infinite ease-in-out forwards
-
+ 
    /* screen breakpoints */
    --screen-sm: 640px; /* Small devices, e.g., phones */
    --screen-md: 768px; /* Medium devices, e.g., tablets */
@@ -35,4 +34,10 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+}
+@layer utilities {
+  .animate-toggle {
+    animation: toggle 0.7s ease-in-out infinite;
+  }
+
 }
